{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 74,
  "lineage": "554f09de-31d4-623f-098b-16a2e5dce9cf",
  "resources": [
    {
      "module": "module.network_failover.module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/networkSecurityGroups/nsg-network-prod-002",
            "location": "eastasia",
            "name": "nsg-network-prod-002",
            "resource_group_name": "rg-network-prod-002",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManagerInbound",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHttpsInbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowGetSessionInformation",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "AllowSshRdpOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "AllowBastionHostCommunication",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Outbound",
                "name": "AllowBastionCommunication",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Instance": "Failover"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_failover.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.140.56.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-002",
            "virtual_network_name": "vnet-network-prod-002"
          },
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default",
            "module.network_failover.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_failover.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.140.56.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002/subnets/subnet-jumpbox",
            "name": "subnet-jumpbox",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-002",
            "service_endpoints": [
              "Microsoft.AzureCosmosDB",
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-network-prod-002"
          },
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default",
            "module.network_failover.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_failover.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "voteapp_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.140.58.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002/subnets/subnet-aks",
            "name": "subnet-aks",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-002",
            "service_endpoints": [
              "Microsoft.AzureCosmosDB",
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-network-prod-002"
          },
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default",
            "module.network_failover.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_failover.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "voteapp_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.140.57.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002/subnets/subnet-gateway",
            "name": "subnet-gateway",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-002",
            "virtual_network_name": "vnet-network-prod-002"
          },
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default",
            "module.network_failover.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_failover.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/networkSecurityGroups/nsg-network-prod-002",
            "subnet_id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002/subnets/AzureBastionSubnet"
          },
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default",
            "module.network_failover.module.nsg.azurerm_network_security_group.default",
            "module.network_failover.module.vnet.azurerm_subnet.bastion",
            "module.network_failover.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_failover.module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.140.56.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "62a2a5cd-0817-4e7b-8d68-12b48142e932",
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-002/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-002",
            "location": "eastasia",
            "name": "vnet-network-prod-002",
            "resource_group_name": "rg-network-prod-002",
            "tags": {
              "Instance": "Failover"
            }
          },
          "dependencies": [
            "module.network_failover.module.group.azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/networkSecurityGroups/nsg-network-prod-001",
            "location": "southeastasia",
            "name": "nsg-network-prod-001",
            "resource_group_name": "rg-network-prod-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManagerInbound",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHttpsInbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowGetSessionInformation",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "AllowSshRdpOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "AllowBastionHostCommunication",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Outbound",
                "name": "AllowBastionCommunication",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Instance": "Main"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.120.56.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-001",
            "virtual_network_name": "vnet-network-prod-001"
          },
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default",
            "module.network_main.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.120.56.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001/subnets/subnet-jumpbox",
            "name": "subnet-jumpbox",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-001",
            "service_endpoints": [
              "Microsoft.AzureCosmosDB",
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-network-prod-001"
          },
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default",
            "module.network_main.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "voteapp_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.120.58.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001/subnets/subnet-aks",
            "name": "subnet-aks",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-001",
            "service_endpoints": [
              "Microsoft.AzureCosmosDB",
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-network-prod-001"
          },
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default",
            "module.network_main.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "voteapp_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.120.57.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001/subnets/subnet-gateway",
            "name": "subnet-gateway",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-prod-001",
            "virtual_network_name": "vnet-network-prod-001"
          },
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default",
            "module.network_main.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/networkSecurityGroups/nsg-network-prod-001",
            "subnet_id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001/subnets/AzureBastionSubnet"
          },
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default",
            "module.network_main.module.nsg.azurerm_network_security_group.default",
            "module.network_main.module.vnet.azurerm_subnet.bastion",
            "module.network_main.module.vnet.azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_main.module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.120.56.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "de6d1db8-958e-4f10-af23-830c42e73106",
            "id": "/subscriptions/524875d7-62d5-42df-8fe5-78822e211bf3/resourceGroups/rg-network-prod-001/providers/Microsoft.Network/virtualNetworks/vnet-network-prod-001",
            "location": "southeastasia",
            "name": "vnet-network-prod-001",
            "resource_group_name": "rg-network-prod-001",
            "tags": {
              "Instance": "Main"
            }
          },
          "dependencies": [
            "module.network_main.module.group.azurerm_resource_group.default"
          ]
        }
      ]
    }
  ]
}